--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,5 +54,14 @@
             app:layout_constraintTop_toBottomOf="@+id/btnTestSnackbar"
             app:layout_constraintLeft_toLeftOf="parent" />
 
+        <Button
+            android:id="@+id/btnShowRecyclerview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{(v)->vm.onClickShowRecyclerviewActivity(v)}"
+            android:text="Activity Show RecyclerView"
+            app:layout_constraintTop_toBottomOf="@+id/btnTestToastShow"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
