--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="vm"
-            type="kr.open.rhpark.app.SecondActivityVm" />
+            type="kr.open.rhpark.app.activity.second.SecondActivityVm" />
 
     </data>
 
