--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,6 @@
             android:layout_height="wrap_content"
             android:onClick="@{(v)->vm.onClickPermission(v)}"
             android:text="permission"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,9 +58,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{(v)->vm.onClickShowRecyclerviewActivity(v)}"
-            android:text="Activity Show RecyclerView"
+            android:text="Show RecyclerView Activity"
             app:layout_constraintTop_toBottomOf="@+id/btnTestToastShow"
             app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Button
+            android:id="@+id/btnShowVibrator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{(v)->vm.onClickShowVibratorActivity(v)}"
+            android:text="Show Vibrator Activity"
+            app:layout_constraintTop_toBottomOf="@+id/btnShowRecyclerview"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Button
+            android:id="@+id/btnShowWindow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{(v)->vm.onClickShowUiUtilsActivity(v)}"
+            android:text="Show Window Activity"
+            app:layout_constraintTop_toBottomOf="@+id/btnShowVibrator"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
