--- a/app/src/main/res/layout/activity_toast_snackbar.xml
+++ b/app/src/main/res/layout/activity_toast_snackbar.xml
@@ -11,6 +11,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <EditText
+
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/btnDefaultToast"
             android:layout_width="wrap_content"
