--- a/app/src/main/res/layout/activity_telephony.xml
+++ b/app/src/main/res/layout/activity_telephony.xml
@@ -27,6 +27,11 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/tvDisplayInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
                     android:id="@+id/tvSimState"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
