--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,13 @@
                     android:text="Show Telephony Activity" />
 
                 <Button
+                    android:id="@+id/btnShowUsim"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{(v)->vm.onClickShowUsimActivity(v)}"
+                    android:text="Show UsimState Activity" />
+
+                <Button
                     android:id="@+id/btnToastSnackbar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
