--- a/app/src/main/res/layout/activity_usim.xml
+++ b/app/src/main/res/layout/activity_usim.xml
@@ -22,22 +22,22 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvActiveDataSubId"
+                    android:id="@+id/tvSimCount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/tvDisplayInfo"
+                    android:id="@+id/tvMaximumUSimCount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/tvTelephonyNetworkState"
+                    android:id="@+id/tvIsAbleEsim"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/tvSimState"
+                    android:id="@+id/tvSimId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -52,17 +52,26 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/tvDisplayName"
+                    android:id="@+id/tvSimState"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+
 
                 <TextView
                     android:id="@+id/tvCountryIso"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
+
                 <TextView
                     android:id="@+id/tvNetworkRoaming"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+
+                <TextView
+                    android:id="@+id/tvActiveDataSubId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
