--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,28 +40,28 @@
                     android:id="@+id/btnTestPermission"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickPermission(v)}"
+                    android:onClick="@{()->vm.onClickPermission()}"
                     android:text="permission" />
 
                 <Button
                     android:id="@+id/btnShowFragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowFragment(v)}"
+                    android:onClick="@{()->vm.onClickShowFragment()}"
                     android:text="Show Fragment" />
 
                 <Button
                     android:id="@+id/btnShowRecyclerview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowRecyclerviewActivity(v)}"
+                    android:onClick="@{()->vm.onClickShowRecyclerviewActivity()}"
                     android:text="Show RecyclerView Activity" />
 
                 <Button
                     android:id="@+id/btnShowVibrator"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowVibratorActivity(v)}"
+                    android:onClick="@{()->vm.onClickShowVibratorActivity()}"
                     android:text="Show Vibrator Activity" />
 
 
@@ -69,56 +69,56 @@
                     android:id="@+id/btnShowDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowDisplayActivity(v)}"
+                    android:onClick="@{()->vm.onClickShowDisplayActivity()}"
                     android:text="Show Display Activity" />
 
                 <Button
                     android:id="@+id/btnShowBattery"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowBatteryActivity(v)}"
+                    android:onClick="@{()->vm.onClickShowBatteryActivity()}"
                     android:text="Show Battery Activity" />
 
                 <Button
                     android:id="@+id/btnShowWindow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowWindowActivity(v)}"
+                    android:onClick="@{()->vm.onClickShowWindowActivity()}"
                     android:text="Show Window Activity" />
 
                 <Button
                     android:id="@+id/btnShowNetwork"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickNetworkActivity(v)}"
+                    android:onClick="@{()->vm.onClickNetworkActivity()}"
                     android:text="Show Network Activity" />
 
                 <Button
                     android:id="@+id/btnShowLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowLocationActivity(v)}"
+                    android:onClick="@{()->vm.onClickShowLocationActivity()}"
                     android:text="Show Location Activity" />
 
                 <Button
                     android:id="@+id/btnShowNotification"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowNotificationActivity(v)}"
+                    android:onClick="@{()->vm.onClickShowNotificationActivity()}"
                     android:text="Show Notification Activity" />
 
                 <Button
                     android:id="@+id/btnShowAlarm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickShowAlarmActivity(v)}"
+                    android:onClick="@{()->vm.onClickShowAlarmActivity()}"
                     android:text="Show Alarm Activity" />
 
                 <Button
                     android:id="@+id/btnToastSnackbar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="@{(v)->vm.onClickToastSnackBar(v)}"
+                    android:onClick="@{()->vm.onClickToastSnackBar()}"
                     android:text="Toast and SnackBar" />
 
 
