--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -32,7 +32,7 @@
             android:id="@+id/btbRcvAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{(v) -> vm.onClickAdd(v)}"
+            android:onClick="@{() -> vm.onClickAdd()}"
             android:text="Set Item"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtKey" />
@@ -41,7 +41,7 @@
             android:id="@+id/btnRcvRemove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{(v) -> vm.onClickRemove(v)}"
+            android:onClick="@{() -> vm.onClickRemove()}"
             android:text="Remove Position"
             app:layout_constraintLeft_toRightOf="@id/btbRcvAdd"
             app:layout_constraintTop_toBottomOf="@id/edtKey" />
